--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>London Trip</title>
 </head>
 <body>
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="londoneye">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="londontower"> 
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="londonbigben">
+        <hr>
+    </header>
     
 </body>
 </html>
