--- a/index.html
+++ b/index.html
@@ -13,6 +13,47 @@
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="londonbigben">
         <hr>
     </header>
+
+    <main>
+        <section>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>    
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Totale</td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+
+            </table>
+            <hr>
+        </section>
+
+    </main>
     
 </body>
 </html>
