--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
             <hr>
         </section>
 
+        <section>
+          <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare Greenwich &checkmark;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &checkmark;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+            </ul>
+            <hr>  
+        </section>
+
     </main>
     
 </body>
